Add Memberful to the layout

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -53,6 +53,25 @@ under the License.
       $(function() { setupCodeCopy(); });
     </script>
     <% end %>
+
+    <!-- Memberful integration -->
+    <script type="text/javascript">
+      window.MemberfulOptions = {site: "https://seobot.memberful.com"};
+
+      (function() {
+        var s   = document.createElement('script');
+
+        s.type  = 'text/javascript';
+        s.async = true;
+        s.src   = 'https://d35xxde4fgg0cx.cloudfront.net/assets/embedded.js';
+
+        setup = function() { window.MemberfulEmbedded.setup(); }
+
+        s.addEventListener("load", setup, false);
+
+        ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
+      })();
+    </script>
   </head>
 
   <body class="<%= page_classes %>" data-languages="<%=h language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>">
