--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -54,6 +54,9 @@ under the License.
     </script>
     <% end %>
 
+    <!-- Favicon -->
+    <%= favicon_tag 'favicon.ico' %>
+
     <!-- Memberful integration -->
     <script type="text/javascript">
       window.MemberfulOptions = {site: "https://seobot.memberful.com"};
